# satchel

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
satchel/: __init__.py  aggregate.py  iterable.py
tests/: test_aggregate.py  test_iterable.py  test_thingamabob.py
thingamabob/: __init__.py  iterable.py
