[tool.poetry]
authors = ["Taylor Beever <taybeever@gmail.com>"]
description = "thingamabob is that thing or tool that you can't remember what its called but you know you need it. This package is a compendium of pure python functions that don't exist in the std lib but maybe they should?"
homepage = "https://github.com/theelderbeever/thingamabob"
license = "MIT"
name = "thingamabob"
readme = "README.md"
repository = "https://github.com/theelderbeever/thingamabob"
version = "0.0.0-alpha.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^6.2"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
target_version = ['py310']

[tool.isort]
include_trailing_comma = true
known_first_party = "src"
multi_line_output = 3
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
